Updated wiki hero. Added donate page.

--- a/site/layouts/index.html
+++ b/site/layouts/index.html
@@ -11,9 +11,9 @@
                         <i class="fas fa-3x fa-code"></i>
                     </span>
                     <p class="title is-4">
-                        <strong>Yuzu Development</strong>
+                        <strong>Getting Started</strong>
                     </p>
-                    <p class="subtitle">---</p>
+                    <p class="subtitle">Build the yuzu source and make a contribution</p>
                 </a>
 
                 <a class="column has-text-centered" href="https://www.google.com">
@@ -21,9 +21,9 @@
                         <i class="fas fa-3x fa-terminal"></i>
                     </span>
                     <p class="title is-4">
-                        <strong>Switch Hacking</strong>
+                        <strong>Hacking the Switch</strong>
                     </p>
-                    <p class="subtitle">---</p>
+                    <p class="subtitle">Learn about the Switch hardware and software stack</p>
                 </a>
 
                 <a class="column has-text-centered" href="https://www.google.com">
@@ -31,9 +31,9 @@
                         <i class="fas fa-3x fa-gamepad"></i>
                     </span>
                     <p class="title is-4">
-                        <strong>Switch Homebrew</strong>
+                        <strong>Homebrew Development</strong>
                     </p>
-                    <p class="subtitle">---</p>
+                    <p class="subtitle">Tools and resources to get started with Switch homebrew</p>
                 </a>
             </nav>
         </div>
