Updated wiki hero actions.

--- a/site/layouts/index.html
+++ b/site/layouts/index.html
@@ -6,34 +6,34 @@
         <div class="container">
             <nav class="columns">
 
-                <a class="column has-text-centered" href="https://www.google.com">
+                <a class="column is-hero-action has-text-centered" href="https://www.google.com">
                     <span class="icon is-large">
                         <i class="fas fa-3x fa-code"></i>
                     </span>
                     <p class="title is-4">
                         <strong>Getting Started</strong>
                     </p>
-                    <p class="subtitle">Build the yuzu source and make a contribution</p>
+                    <p class="subtitle is-6">Build the yuzu source and make a contribution</p>
                 </a>
 
-                <a class="column has-text-centered" href="https://www.google.com">
+                <a class="column is-hero-action has-text-centered" href="https://www.google.com">
                     <span class="icon is-large">
                         <i class="fas fa-3x fa-terminal"></i>
                     </span>
                     <p class="title is-4">
-                        <strong>Hacking the Switch</strong>
+                        <strong>Reverse Engineering</strong>
                     </p>
-                    <p class="subtitle">Learn about the Switch hardware and software stack</p>
+                    <p class="subtitle is-6">Learn the Switch hardware and software stack</p>
                 </a>
 
-                <a class="column has-text-centered" href="https://www.google.com">
+                <a class="column is-hero-action has-text-centered" href="https://www.google.com">
                     <span class="icon is-large">
                         <i class="fas fa-3x fa-gamepad"></i>
                     </span>
                     <p class="title is-4">
-                        <strong>Homebrew Development</strong>
+                        <strong>Homebrew Apps</strong>
                     </p>
-                    <p class="subtitle">Tools and resources to get started with Switch homebrew</p>
+                    <p class="subtitle is-6">Resources to get started with Switch homebrew</p>
                 </a>
             </nav>
         </div>
