--- a/site/layouts/index.html
+++ b/site/layouts/index.html
@@ -44,6 +44,7 @@
 <section class="hero">
     <div class="hero-body">
         <div class="container">
+            <span id="about-section"></span>
             <h1 class="title">About</h1>
             <div class="content">
                 <p>
