Theme menu logo as well

--- a/site/layouts/partials/jumbotron.html
+++ b/site/layouts/partials/jumbotron.html
@@ -54,7 +54,7 @@
      inkscape:groupmode="layer"
      inkscape:label="switch_outline_svg_final_white"
      transform="matrix(1.3333333,0,0,-1.3333333,0,784.29333)"><g
-       id="Switch"
+       id="jumbotron-switch"
        inkscape:label="#g825"><g
          id="g827"
          clip-path="url(#clipPath831)"><g
@@ -82,7 +82,7 @@
              style="fill:none;stroke:#ffffff;stroke-width:1;stroke-linecap:butt;stroke-linejoin:miter;stroke-miterlimit:10;stroke-dasharray:none;stroke-opacity:1"
              id="path847"
              inkscape:connector-curvature="0" /></g></g></g><g
-       id="RightJoy"
+       id="jumbotron-rightjoy"
        inkscape:label="#g849"
        transform="translate(6)"><g
          id="g851"
@@ -243,7 +243,7 @@
              style="fill:none;stroke:#ffffff;stroke-width:1;stroke-linecap:butt;stroke-linejoin:miter;stroke-miterlimit:10;stroke-dasharray:none;stroke-opacity:1"
              id="path959"
              inkscape:connector-curvature="0" /></g></g></g><g
-       id="LeftJoy"
+       id="jumbotron-leftjoy"
        inkscape:label="#g961"
        transform="translate(-6)"><g
          id="g963"
