--- a/src/scss/yuzu/yuzu_after_derived.scss
+++ b/src/scss/yuzu/yuzu_after_derived.scss
@@ -2,6 +2,7 @@
 $background: darken($dark, 8);
 
 $navbar-background-color: $dark;
+$navbar-item-color: $white;
 
 $box-background-color: $info;
 $card-background-color: $info;
