Added navbar styles for item.

--- a/src/scss/yuzu/yuzu_after_derived.scss
+++ b/src/scss/yuzu/yuzu_after_derived.scss
@@ -2,7 +2,9 @@
 $background: darken($dark, 8);
 
 $navbar-background-color: $dark;
-$navbar-item-color: $white;
+$navbar-item-color: $black;
+$navbar-item-hover-background-color: $black;
+$navbar-item-hover-color: $white;
 
 $box-background-color: $info;
 $card-background-color: $info;
