Tweaked SCSS for production.

--- a/src/scss/yuzu/yuzu_after_derived.scss
+++ b/src/scss/yuzu/yuzu_after_derived.scss
@@ -1,8 +1,7 @@
 /* Yuzu uses a dark theme by default */
 $background: darken($dark, 8);
 
-$navbar-background-color: $dark;
-$navbar-item-color: $black;
+$navbar-item-color: $white;
 $navbar-item-hover-background-color: $black;
 $navbar-item-hover-color: $white;
 
