Updated bulma to latest version. Fixed CSS to reflect new bulma changes.

--- a/src/scss/yuzu/yuzu_after_derived.scss
+++ b/src/scss/yuzu/yuzu_after_derived.scss
@@ -2,8 +2,8 @@
 $background: darken($dark, 8);
 
 $navbar-background-color: $dark;
-$navbar-item-color: $dark;
-$navbar-item-hover-background-color: $dark;
+$navbar-item-color: $white;
+$navbar-item-hover-background-color: $black;
 $navbar-item-hover-color: $white;
 
 $box-background-color: $info;
