Updated actionable elements for wiki hero.

--- a/site/layouts/index.html
+++ b/site/layouts/index.html
@@ -7,7 +7,7 @@
             <nav class="columns">
 
                 <a class="column has-text-centered" href="https://www.google.com">
-                    <span class="icon is-large">
+                    <span class="icon is-actionable is-large">
                         <i class="fas fa-3x fa-code"></i>
                     </span>
                     <p class="title is-4">
@@ -17,7 +17,7 @@
                 </a>
 
                 <a class="column has-text-centered" href="https://www.google.com">
-                    <span class="icon is-large">
+                    <span class="icon is-actionable is-large">
                         <i class="fas fa-3x fa-terminal"></i>
                     </span>
                     <p class="title is-4">
@@ -27,7 +27,7 @@
                 </a>
 
                 <a class="column has-text-centered" href="https://www.google.com">
-                    <span class="icon is-large">
+                    <span class="icon is-actionable is-large">
                         <i class="fas fa-3x fa-gamepad"></i>
                     </span>
                     <p class="title is-4">
