--- a/site/layouts/index.html
+++ b/site/layouts/index.html
@@ -6,7 +6,7 @@
         <div class="container">
             <nav class="columns">
 
-                <a class="column has-text-centered" href="https://www.google.com">
+                <a class="column has-text-centered" href="{{ .Site.BaseURL }}/wiki/home/">
                     <span class="icon is-actionable is-large">
                         <i class="fas fa-3x fa-code"></i>
                     </span>
@@ -16,7 +16,7 @@
                     <p class="subtitle is-6">Build the yuzu source and make a contribution</p>
                 </a>
 
-                <a class="column has-text-centered" href="https://www.google.com">
+                <a class="column has-text-centered" href="{{ .Site.BaseURL }}/wiki/switch-hardware-and-software/">
                     <span class="icon is-actionable is-large">
                         <i class="fas fa-3x fa-terminal"></i>
                     </span>
@@ -26,7 +26,7 @@
                     <p class="subtitle is-6">Learn the Switch hardware and software stack</p>
                 </a>
 
-                <a class="column has-text-centered" href="https://www.google.com">
+                <a class="column has-text-centered" href="{{ .Site.BaseURL }}/wiki/switch-homebrew/">
                     <span class="icon is-actionable is-large">
                         <i class="fas fa-3x fa-gamepad"></i>
                     </span>
