Added credits section.

--- a/site/layouts/index.html
+++ b/site/layouts/index.html
@@ -48,21 +48,22 @@
             <h1 class="title">About</h1>
             <div class="content">
                 <p>
-                        yuzu is a work-in-progress Nintendo Switch emulator. yuzu is an open-source project, licensed under the GPLv2 (or any later
-                        version). yuzu has been designed with portability in mind, with builds available for Windows, Linux,
-                        and macOS. The project was started in spring of 2017 by <a href="https://github.com/bunnei">bunnei</a>, one of the original authors of the popular
-                        <a href="https://citra-emu.org/">Citra 3DS emulator</a>, to experiment with and research the Nintendo Switch. Due to the similarities between
-                        Switch and 3DS, yuzu was developed as a fork of Citra. This means that it uses the same project architecture,
-                        and both emulators benefit from shared improvements. During the early months of development, work was
-                        done in private, and progress was slow. However, as Switch reverse-engineering and homebrew development
-                        became popular, work on yuzu began to take off as well.
-                    </p>
-    
-                    <p>
-                        In January of 2018, the yuzu team was formed out of several Citra developers, and the decision was made to release the project
-                        publicly. As an emulator, yuzu is in its infancy, and is only currently useful for Switch reverse-engineering
-                        and homebrew development.
-                    </p>
+                    yuzu is a work-in-progress Nintendo Switch emulator. yuzu is an open-source project, licensed under the GPLv2 (or any later
+                    version). yuzu has been designed with portability in mind, with builds available for Windows, Linux,
+                    and macOS. The project was started in spring of 2017 by
+                    <a href="https://github.com/bunnei">bunnei</a>, one of the original authors of the popular
+                    <a href="https://citra-emu.org/">Citra 3DS emulator</a>, to experiment with and research the Nintendo Switch. Due to the similarities
+                    between Switch and 3DS, yuzu was developed as a fork of Citra. This means that it uses the same project
+                    architecture, and both emulators benefit from shared improvements. During the early months of development,
+                    work was done in private, and progress was slow. However, as Switch reverse-engineering and homebrew
+                    development became popular, work on yuzu began to take off as well.
+                </p>
+
+                <p>
+                    In January of 2018, the yuzu team was formed out of several Citra developers, and the decision was made to release the project
+                    publicly. As an emulator, yuzu is in its infancy, and is only currently useful for Switch reverse-engineering
+                    and homebrew development.
+                </p>
             </div>
 
             <div class="tile is-ancestor">
@@ -96,8 +97,9 @@
                         <div class="card-content">
                             <p class="title is-4">Where does the name come from?</p>
                             <div class="content">
-                                <a href="https://en.wikipedia.org/wiki/Citrus_junos">Citrus junos, or yuzu (from Japanese ユズ)</a>, is a citrus fruit, most commonly used in Asian cuisines. This name was chosen as
-                                an homage to Citra and its developers, whose work gave the foundation for this project.
+                                <a href="https://en.wikipedia.org/wiki/Citrus_junos">Citrus junos, or yuzu (from Japanese ユズ)</a>, is a citrus fruit, most commonly used in Asian
+                                cuisines. This name was chosen as an homage to Citra and its developers, whose work gave
+                                the foundation for this project.
                             </div>
                         </div>
                     </div>
@@ -129,4 +131,21 @@
         </div>
     </div>
 </section>
+
+<!-- Credits Section -->
+<section class="hero">
+    <div class="hero-body">
+        <div class="container has-text-centered has-text-grey">
+            <p>Making an emulator for the Nintendo Switch is a massive effort, and we’d like to give a huge shout out and thank you to all the folks involved!</p>
+            
+            <p>Thank you to the Citra team for providing an excellent foundation for this project.
+                <a href="https://github.com/Subv">Subv</a>, <a href="https://github.com/MerryMage">MerryMage</a>, <a href="https://github.com/jroweboy">jroweboy</a>, <a href="https://github.com/bunnei">bunnei</a>, for their work to jumpstart yuzu.</p>
+            <p><a href="https://github.com/chris062689">Flame Sage</a>, <a href="https://github.com/j-selby">Selby</a>, <a href="https://github.com/Schplee">Flamboyant Ham</a>, for their work on our web infrastucture.</p>
+            <p>&nbsp;</p>
+            <p>Furthermore, we'd like to thank the <a href="https://reswitched.tech/">ReSwitched team</a>, this project would not exist without their excellent work and willingness to share their knowledge:
+                <a href="https://github.com/SciresM/">SciresM</a>, <a href="https://github.com/daeken">Daeken</a>, <a href="https://github.com/Normmatt">Normmatt</a>, <a href="https://github.com/ogniK5377">ogniK</a>, <a href="https://github.com/hthh">hthh</a>, <a href="https://github.com/TuxSH">TuxSH</a>, <a href="https://github.com/hedgeberg">hedgeberg</a>.</p>
+        </div>
+    </div>
+</section>
+
 {{ end }}
