Added additional name to reswitch team.

--- a/site/layouts/index.html
+++ b/site/layouts/index.html
@@ -143,7 +143,7 @@
             <p><a href="https://github.com/chris062689">Flame Sage</a>, <a href="https://github.com/j-selby">Selby</a>, <a href="https://github.com/Schplee">Flamboyant Ham</a>, for their work on our web infrastucture.</p>
             <p>&nbsp;</p>
             <p>Furthermore, we'd like to thank the <a href="https://reswitched.tech/">ReSwitched team</a>, this project would not exist without their excellent work and willingness to share their knowledge:
-                <a href="https://github.com/SciresM/">SciresM</a>, <a href="https://github.com/daeken">Daeken</a>, <a href="https://github.com/Normmatt">Normmatt</a>, <a href="https://github.com/ogniK5377">ogniK</a>, <a href="https://github.com/hthh">hthh</a>, <a href="https://github.com/TuxSH">TuxSH</a>, <a href="https://github.com/hedgeberg">hedgeberg</a>.</p>
+                <a href="https://github.com/SciresM/">SciresM</a>, <a href="https://github.com/daeken">Daeken</a>, <a href="https://github.com/Normmatt">Normmatt</a>, <a href="https://github.com/ogniK5377">ogniK</a>, <a href="https://github.com/hthh">hthh</a>, <a href="https://github.com/TuxSH">TuxSH</a>, <a href="https://github.com/hedgeberg">hedgeberg</a>, <a href="https://github.com/misson20000">misson20000</a>.</p>
         </div>
     </div>
 </section>
