Add downloads page for nightly and canary

--- a/site/layouts/partials/home_hero_contents.html
+++ b/site/layouts/partials/home_hero_contents.html
@@ -5,6 +5,13 @@
     The emulator is currently only useful for homebrew development and research purposes.</p>
 </div>
 <div>
+    <a class="button is-medium is-light" href="/downloads" target="_blank">
+        <span class="icon">
+            <i class="fas fa-arrow-down"></i>
+        </span>
+        <span>Downloads</span>
+    </a>
+    
     <a class="button is-medium is-light" href="{{ .Site.Params.GithubURL }}" target="_blank">
         <span class="icon">
             <i class="fab fa-github"></i>
