--- a/src/scss/yuzu/yuzu_after_derived.scss
+++ b/src/scss/yuzu/yuzu_after_derived.scss
@@ -8,10 +8,12 @@ $navbar-item-hover-color: $white;
 
 $box-background-color: $info;
 $card-background-color: $info;
+$table-background-color: $info;
 
 $text: $white;
 $text-light: $white;
 $text-strong: $white;
+$table-color: $white;
 
 $link: #03a9f4;
 
