Add downloads page for nightly and canary (#11)
* Add downloads page for nightly and canary

* Use boxes for downloads

* Add TODO for commit information

* Add TODO for css hack

--- a/src/scss/yuzu/yuzu.scss
+++ b/src/scss/yuzu/yuzu.scss
@@ -34,3 +34,8 @@ $switch-gray: #828282;
   position: relative;
   top: -100px;
 }
+
+// TODO: Hack for links appearing as the wrong color
+a:hover {
+  color: lighten($blue, 5);
+}
