Updated shared theme. Moved downloads.js to it's own script file. Updated scss for pagination. Downloads.md is now just text.

--- a/src/scss/yuzu/yuzu_after_derived.scss
+++ b/src/scss/yuzu/yuzu_after_derived.scss
@@ -17,5 +17,8 @@ $table-color: $white;
 
 $link: #03a9f4;
 
+$pagination-color: $white;
+$pagination-hover-color: $grey;
+
 $title-color: $white;
 $subtitle-color: $white;
