--- a/src/scss/shared_customization.scss
+++ b/src/scss/shared_customization.scss
@@ -2,7 +2,7 @@ $body-background-color: $background;
 $footer-background-color: $background;
 
 // Changes the navbar height to match discourse.
-$navbar-height: 64px;
+$navbar-height: 4rem;
 
 // Allows for larger icons with less padding
 $navbar-item-img-max-height: 2.75rem;
