--- a/site/layouts/partials/layout/sidebar.html
+++ b/site/layouts/partials/layout/sidebar.html
@@ -1,6 +1,6 @@
 <div class="pt-md">
     <figure class="image is-256x256 is-pulled-right">
-        <img src="http://via.placeholder.com/400x300" />
+        <img src="http://via.placeholder.com/400x300?text=+" />
         <p class="is-size-5 has-text-centered">Advertisement</p>
     </figure>
 </div>
