Updated sidebar with GA.

--- a/site/layouts/partials/layout/sidebar.html
+++ b/site/layouts/partials/layout/sidebar.html
@@ -1,6 +1,9 @@
 <div class="pt-md">
-    <figure class="image is-256x256 is-pulled-right">
-        <img src="http://via.placeholder.com/400x300?text=+" />
+    <figure class="image" style="width: 415px; height: 335px; margin: auto;">
+        <ins class="adsbygoogle" style="display:inline-block; width:400px; height:300px"
+            data-ad-client="{{ .Site.Params.GoogleAdsenseClient }}"
+            data-ad-slot="5249468939">
+        </ins>
         <p class="is-size-5 has-text-centered">Advertisement</p>
     </figure>
 </div>
